<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:showDividers="middle|beginning|end|none"
            android:stretchColumns="1,2,3">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_voltage_cell1"
                    android:textSize="20sp" />
                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/voltage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textAlignment="viewEnd"
                    android:textSize="20sp" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_voltage_cell2"
                    android:textSize="20sp" />
                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/voltageCell2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textAlignment="viewEnd"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:showDividers="middle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_voltage_diff"
                    android:textSize="20sp" />
                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/voltageDifference"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textAlignment="viewEnd"
                    android:textSize="20sp" />

            </TableRow>



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:showDividers="middle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Current"
                    android:textSize="20sp" />
                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/current"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textAlignment="viewEnd"
                    android:textSize="20sp" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:showDividers="middle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rssi"
                    android:textSize="20sp" />
                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/rssi"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textAlignment="viewEnd"
                    android:textSize="20sp" />

            </TableRow>



        </TableLayout>

        <LinearLayout
                android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_state" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/connection_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnected" />
        </LinearLayout>


        <com.androidplot.xy.XYPlot
            android:id="@+id/plotCellVoltage"
            android:layout_width="wrap_content"
            android:layout_height="320dp"
            android:layout_gravity="center_horizontal" />

        <com.androidplot.xy.XYPlot
            android:id="@+id/plotCurrent"
            android:layout_width="wrap_content"
            android:layout_height="320dp" />

        <com.androidplot.xy.XYPlot
            android:id="@+id/plotAccelerometer"
            android:layout_width="wrap_content"
            android:layout_height="320dp"
            android:layout_gravity="center_horizontal" />

        <com.androidplot.xy.XYPlot
            android:id="@+id/plotRssi"
            android:layout_width="wrap_content"
            android:layout_height="320dp"
            android:layout_gravity="center_horizontal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_address" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>

<!--
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/my_navigation_items" /> -->
</android.support.v4.widget.DrawerLayout>